<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg2"
    tools:context="com.Cityapp.cityCare.Login"
    tools:ignore="SpUsage">


    <Button
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/facebook"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/sign_with_fb"
        android:maxLines="1"
        android:paddingStart="70dp"
        android:paddingLeft="70dp"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20dp"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/or"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/or_btn"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/lltext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/or"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/dont_have_account_txt"
            android:textColor="#3c3c3c"
            android:textSize="16dp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:maxLines="1"
            android:text="@string/create_new_one_txt"
            android:textColor="#0089CF"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>


    <Button
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/signin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/lltext"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/sign_in"
        android:text="@string/sign_in_txt"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_above="@+id/password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/mailbtn"
        android:hint="@string/username_txt"
        android:paddingStart="70dp"
        android:paddingLeft="50dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_above="@+id/signin"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/passwordbtn"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        android:paddingStart="70dp"
        android:paddingLeft="50dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aladin"
        android:includeFontPadding="true"
        android:text="@string/login_txt"
        android:textColor="#FFFFFF"
        android:textSize="45dp" />
</RelativeLayout>
