<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:background="@drawable/curveshape"
    app:cardBackgroundColor="#F9FBFD"
    app:cardCornerRadius="12dp"
    android:elevation="3dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="240dp">

        <ImageView
            android:layout_width="310dp"
            android:layout_height="118dp"
            android:layout_marginTop="-24dp"
            android:background="@drawable/layoutdialogerror"
            android:id="@+id/img_cancel"
            android:padding="8dp"
            android:src="@drawable/err2"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_cancel"
            android:fontFamily="@font/raleway"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/errormessagecolorhead" />

        <TextView
            android:id="@+id/txt_error_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_dialog_title"
            android:layout_marginTop="-30dp"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/bookalert"
            android:textColor="@color/errormessagecolorhead"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txt_error_description"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/okbtn"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/button_yes"
            android:textColor="@color/errortextconfirmcolor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txt_error_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/okbtn"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/button_no"
            android:textColor="@color/errortextconfirmcolor"
            android:textSize="18sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>